# todori

./: .dockerignore  .gitignore  AGENTS.md  CLA.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  flutter_rust_bridge.yaml
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy-staging.yml  infra-apply.yml  infra-check.yml
.sqlx/: query-00ae59afbbef9e3411f9c7bee21cb67a8d8acea4e1131c1cfd2f9d5948f4e54a.json  query-045743d0b822718f11bf97e75cfd74fbc9fa8a358c186c2489d73f717c9520c6.json  query-08625baa8b62fe773ae0ab44c43fd7a35464e37e1d5fffed9e1fd2822c1d743f.json  query-08ad6253554ed2287ee15c4098f4824a68b74f353c85560bb09fbbdd6a1d1000.json  query-0928d2df610552ea3ef3108aea6579b0b1210ad0fba36d13937eca717a93c6d4.json  query-0dbe651aeb2404abe880348199a01ff511214bb5038163e5c2aaa7e6d77bc349.json  query-0fed5cfcb03a4040455b6d53af724d52f7727ab687c733df433f420b1b3ab354.json  query-107b0af401c5e0b930fdcae8b8349a2def0ca2e581d45c26c8d81144db237f12.json  query-1455448fee22f9979a051316316ee30f1271ddeafcc365b18663ddd352dc26ea.json  query-1a5fd183d9540c585a1cb9bbdb0408e766ded047ce231e55d4b198d37a38ed59.json  query-1ac2eb3041305dc0ab281c7c1af90da7a302c91174bb59bb011ae0d3b4b2dbef.json  query-1b26ea30204f936dd8bf8f4c9e0478ecf5664113946e54628c30b7c443ec5dc3.json  query-1ceb8772f0eeb4f1ba269b3413984d2efd1ea2f96fc1c1ee38267d9673acaf11.json  query-1d6df5614fb174a1f6ef5603ffc4a9d855d74992496162b0211ea71e397eab11.json  query-1d6ec373cf1e49bde101273920ab341ee8f16afa9800d8122efbf1b81cb440c0.json  query-1e7f4008830d7ede044733db25910ac12d2987f8c90c159bb1c4928b1976b2e1.json  query-1ed2ae1fa1653054a1979078e382bfd881b04392def2ac6e5579a5ceae52640f.json  query-20ec559dc7285b4f40c7dc845e285b061299b7e9a0f62fd65c34a6550f0338c7.json  query-2268e775913a360a13ddee241027bdea61b89406059495400a36dcafcf9d54cb.json  query-232d9de8ae13e4ef7c70f9947f27d018a4388e814f0dc828dd99fccff9912ab8.json  query-2433b7a34fe1a615ac44d0c52e94405376728a9d6a3c33a5ce34edf812b39f48.json  query-248322cfd556680850185736950e1aa7a6abae721743bc6cfd4b64bb157e6a52.json  query-266e330698a96d57ef9a8dd634581422561dff703bdaa14f1d5348fc51cae9d7.json  query-2856aeffe7bd487befbfab246e388f1d0723185c02b7f102a901da9b767d5805.json  query-2ac4b434df9a5cfb48033639a9df20399a922f70e341fa8a2a6a59d07acf6161.json  query-2c9e2f131ffc22a4b8a78aa789d1f0aed9da824647149cbfacb8c193938c8ee0.json  query-2d1a8689f4e4d0d7fcc0a491ee1393b889575e82453b757271a88a5bdeffeb3e.json  query-2d8a16c296893d243c5f0870824dd011d36d4cff88923c3dc62391fbf83b85e8.json  query-2e3e95a11ab64bd32765472b6a49e189ebb301dd473de5449859a964fbbf6a43.json  query-33b2ae4ffb740aaebda385a23ec5deb4a4c44b6a4e30fc6b272ec14d8c93684e.json  query-36a4850d4ab080bee5bd09e24508ec10a00f2dc96c06cea05d06ae9bffd85e84.json  query-388963b0e2b458069d2f8d553bd8c80b8b148c6def3ad513172ed863e97e031c.json  query-39d87de51025f8001cda38408b991a80c13dab6b831734fe0b364d8cc030fa09.json  query-3b4875909ff86e1b6d7ccdb79de3db793807252d05c51f21c3bc5c420520b547.json  query-3c4cd22ec32886324ffc85df57a0e1822b6f3b40ba4e43638e1d24b65329fc34.json  query-3e0400805e77d784fc27ba3f21936818d52db898d363409cfe2631d1cf058a4a.json  query-41a03972c60d99199612720069191e838cf59c04ffed7a018bac1d38ffdf2c23.json  query-421f6ef433aa37b6b51e1b3e36ee0d9d3337adfa243337ce485851e837539b1c.json  query-470ea5bb3a7272c84b46c2589cf013adb713ffdae3d2091302f13e98bb8204ec.json  query-47ddc6ec3f9891e2e10a9f985b92f8c929c83317e58e7e63c79063b370d0aacb.json  (+102 more)
app/: .metadata  README.md  pubspec.yaml
app/integration_test/: device_key_rotation_test.dart
app/rust/: Cargo.toml
app/rust/src/: api.rs  client_handle.rs  dev_key_store.rs  frb_generated.rs  lib.rs  profile_handle.rs  support.rs  sync_store.rs
cli/: Cargo.toml
cli/src/: main.rs
core/client/: Cargo.toml
core/client/src/: crud_service.rs  device_key_rotation.rs  lib.rs  local_crypto.rs  model.rs  mutation_service.rs  sqlite_sync_store.rs  task_service.rs
core/client/src/profile/: account.rs  application.rs  mod.rs  sync.rs
core/client/src/runtime/: account.rs  application.rs  mod.rs  recurrence.rs  sync.rs
core/crypto/: Cargo.toml
core/crypto/src/: aead.rs  android_capsule_store.rs  dev_key_store.rs  device_key.rs  kdf.rs  key_hierarchy.rs  lib.rs  local_capsule.rs  opaque.rs  organization.rs
core/domain/: Cargo.toml
core/domain/src/: entities.rs  lib.rs  recurrence.rs  sort_order.rs  tenant.rs  usecases.rs
core/storage/: Cargo.toml
core/storage/src/: lib.rs  schema.sql
core/sync/: Cargo.toml
core/sync/src/: account.rs  apply.rs  engine.rs  enqueue.rs  envelope.rs  field_map.rs  hlc.rs  key_manifest.rs  keys.rs  lib.rs  merge.rs  organization.rs  protocol.rs  resync.rs  rotation.rs
docs/: 01_企画書.md  02_機能仕様書.md  03_技術仕様書.md  04_課金設計書.md  05_Phase1計画書.md  05_設計判断記録.md  06_事業・法務方針.md  07_Phase1計画書.md  08_Phase2計画書.md  09_運用ガイド.md  billing_overview.md  legal_overview.md
fuzz/: Cargo.toml  crypto_parsers.dict
fuzz/fuzz_targets/: crypto_parsers.rs
infra/: README.md
mcp-server/: Cargo.toml
realtime-worker/: README.md  package-lock.json  package.json  tsconfig.json  vitest.config.ts  wrangler.jsonc
server/: Cargo.toml  Dockerfile  Dockerfile.lambda
server/migrations/: 202607080001_sync_server.sql  202607080002_account_key_bundles.sql  202607100001_sync_protocol_v2.sql  202607100002_fuzzy_resync.sql  202607110001_rls_hardening.sql  202607110002_archive_first_deletion.sql  202607130001_timer_sessions.sql  202607160001_billing_foundation.sql  202607170001_template_recurrence.sql  202607240001_tenant_record_keys.sql  202607240002_task_series_domain.sql
server/src/: auth.rs  billing.rs  config.rs  db.rs  lib.rs  main.rs  organization.rs  realtime.rs  sync.rs
server/src/routes/: auth.rs  billing.rs  mod.rs  organization.rs  realtime.rs  sync.rs  sync_token.rs  tenant.rs
server/tests/: auth_server.rs  billing_foundation.rs  realtime_gateway.rs  rls_hardening.rs  sync_server.rs  sync_v2.rs
tool/: check_adr_structure.sh  check_crypto_dependency_pins.sh  check_secret_patterns.sh  dev_server.sh  prepare_lambda_extension.sh  sqlx_prepare.sh
xtask/: Cargo.toml
(+366 files in other folders)
