[workspace]
resolver = "3"
members = [
    "core/domain",
    "core/crypto",
    "core/client",
    "core/sync",
    "core/storage",
    "app/rust",
    "cli",
    "mcp-server",
    "server",
    "xtask",
]

[workspace.package]
edition = "2021"
license = "AGPL-3.0-only"
publish = false

[workspace.dependencies]
# core/domain
uuid = { version = "1", features = ["v7", "serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
proptest = "1"

# core/crypto
argon2 = "0.5"
chacha20poly1305 = "0.10"
hkdf = "0.12"
opaque-ke = { version = "3.0.0", features = ["argon2"] }
rand = "0.8"
sha2 = "0.10"
x25519-dalek = { version = "2", features = ["static_secrets"] }
zeroize = { version = "1", features = ["zeroize_derive"] }

# core/storage
hex = "0.4"
rusqlite = { version = "0.40.1", features = ["bundled-sqlcipher-vendored-openssl"] }
tempfile = "3"

# app/rust
core-foundation = "0.10"
core-foundation-sys = "0.8"
flutter_rust_bridge = "2.12.0"
security-framework = { version = "3.7.0", features = ["OSX_10_15"] }
security-framework-sys = "2.17"

# cli
clap = { version = "4", features = ["derive"] }

# server
axum = "0.8"
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
chrono-tz = { version = "0.10", features = ["serde"] }
iana-time-zone = "0.1"
http = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
sqlx-core = { version = "0.9.0", default-features = false, features = ["_rt-tokio", "_tls-rustls-ring-native-roots"] }
sqlx-postgres = { version = "0.9.0", default-features = false, features = ["uuid", "chrono"] }
testcontainers-modules = { version = "0.15.0", features = ["postgres"] }
tokio = { version = "1", features = ["rt-multi-thread", "net", "signal", "macros"] }
tower = { version = "0.5", features = ["util"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# workspace-local crates
todori-domain = { path = "core/domain" }
todori-crypto = { path = "core/crypto" }
todori-client = { path = "core/client" }
todori-sync = { path = "core/sync" }
todori-storage = { path = "core/storage" }
