[workspace]
resolver = "3"
members = [
    "core/domain",
    "core/crypto",
    "core/client",
    "core/sync",
    "core/storage",
    "app/rust",
    "cli",
    "mcp-server",
    "server",
    "xtask",
]
exclude = ["fuzz"]

[workspace.package]
edition = "2021"
license = "AGPL-3.0-only"
publish = false

[workspace.dependencies]
# core/domain
uuid = { version = "1", features = ["v5", "v7", "serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
proptest = "1"
rrule = "=0.14.0"

# core/crypto
aws-lc-rs = { version = "=1.17.1", features = ["unstable"] }
aws-lc-sys = "=0.42.0"
argon2 = "=0.5.3"
bip39 = { version = "=2.2.2", features = ["zeroize"] }
chacha20poly1305 = "=0.10.1"
hkdf = "=0.12.4"
opaque-ke = { version = "=4.0.1", features = ["argon2"] }
rand = "=0.8.6"
sha2 = "=0.10.9"
x25519-dalek = { version = "=2.0.1", features = ["static_secrets"] }
zeroize = { version = "=1.9.0", features = ["zeroize_derive"] }

# core/storage
hex = "0.4"
rusqlite = { version = "=0.40.1", features = ["bundled-sqlcipher-vendored-openssl"] }
tempfile = "3"

# app/rust
core-foundation = "0.10"
core-foundation-sys = "0.8"
flutter_rust_bridge = "2.12.0"
security-framework = { version = "=3.7.0", features = ["OSX_10_15"] }
security-framework-sys = "=2.17.0"
jni = "=0.21.1"

# cli
clap = { version = "4", features = ["derive"] }

# server
axum = "0.8"
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
chrono-tz = { version = "0.10", features = ["serde"] }
iana-time-zone = "0.1"
http = "1"
hmac = "0.12.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
sqlx-core = { version = "0.9.0", default-features = false, features = ["_rt-tokio", "_tls-rustls-ring-native-roots"] }
sqlx-postgres = { version = "0.9.0", default-features = false, features = ["uuid", "chrono"] }
testcontainers-modules = { version = "0.15.0", features = ["postgres"] }
tokio = { version = "1", features = ["rt-multi-thread", "net", "signal", "macros", "time"] }
tower = { version = "0.5", features = ["util"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# workspace-local crates
taskveil-domain = { path = "core/domain" }
taskveil-crypto = { path = "core/crypto" }
taskveil-client = { path = "core/client" }
taskveil-sync = { path = "core/sync" }
taskveil-storage = { path = "core/storage" }
