[package]
name = "todori-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "=0.4.13"
todori-crypto = { path = "../core/crypto" }
todori-sync = { path = "../core/sync" }
uuid = "=1.24.0"

[[bin]]
name = "crypto_parsers"
path = "fuzz_targets/crypto_parsers.rs"
test = false
doc = false
bench = false
