[package]
name = "todori-server"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
axum.workspace = true
base64.workspace = true
chrono.workspace = true
hmac.workspace = true
opaque-ke.workspace = true
rand.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
sqlx-core.workspace = true
sqlx-postgres.workspace = true
thiserror.workspace = true
tokio.workspace = true
todori-crypto.workspace = true
todori-sync.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true

[dev-dependencies]
argon2.workspace = true
http.workspace = true
rusqlite.workspace = true
testcontainers-modules.workspace = true
tempfile.workspace = true
todori-client = { workspace = true, features = ["test-support"] }
todori-domain.workspace = true
todori-storage.workspace = true
tower.workspace = true
zeroize.workspace = true
