[package]
name = "todori_app_bridge"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true

[lib]
crate-type = ["cdylib", "staticlib", "lib"]

[dependencies]
flutter_rust_bridge = "=2.12.0"
serde_json.workspace = true
todori-crypto.workspace = true
todori-domain.workspace = true
todori-sync.workspace = true
todori-storage.workspace = true
tokio.workspace = true
zeroize.workspace = true

[target.'cfg(any(target_os = "ios", target_os = "macos"))'.dependencies]
security-framework.workspace = true
