[package]
name = "taskveil_app_bridge"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true

[lib]
crate-type = ["cdylib", "staticlib", "lib"]

[dependencies]
flutter_rust_bridge = { version = "=2.12.0", features = ["chrono"] }
taskveil-client.workspace = true
