[package]
name = "todori-client"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
thiserror.workspace = true
todori-crypto.workspace = true
todori-domain.workspace = true
todori-storage.workspace = true
todori-sync.workspace = true
zeroize.workspace = true

[dev-dependencies]
serde_json.workspace = true
tempfile.workspace = true
