[package]
name = "todori-client"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true

[features]
default = []
test-support = []

[dependencies]
thiserror.workspace = true
todori-crypto.workspace = true
todori-domain.workspace = true
todori-storage.workspace = true
todori-sync.workspace = true
zeroize.workspace = true
iana-time-zone.workspace = true
chrono.workspace = true
base64.workspace = true

[dev-dependencies]
serde_json.workspace = true
tempfile.workspace = true
