[package]
name = "taskveil-client"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true

[features]
default = []
test-support = []

[dependencies]
thiserror.workspace = true
taskveil-crypto.workspace = true
taskveil-domain.workspace = true
taskveil-storage.workspace = true
taskveil-sync.workspace = true
zeroize.workspace = true
iana-time-zone.workspace = true
chrono.workspace = true
base64.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
tempfile.workspace = true
