[package]
name = "todori-crypto"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
argon2.workspace = true
chacha20poly1305.workspace = true
hkdf.workspace = true
opaque-ke.workspace = true
rand.workspace = true
sha2.workspace = true
thiserror.workspace = true
x25519-dalek.workspace = true
zeroize.workspace = true

[target.'cfg(any(target_os = "ios", target_os = "macos"))'.dependencies]
security-framework.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation.workspace = true
core-foundation-sys.workspace = true
security-framework-sys.workspace = true
