[package]
name = "taskveil-crypto"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
aws-lc-rs.workspace = true
argon2.workspace = true
bip39.workspace = true
chacha20poly1305.workspace = true
hkdf.workspace = true
opaque-ke.workspace = true
rand.workspace = true
sha2.workspace = true
thiserror.workspace = true
uuid.workspace = true
x25519-dalek.workspace = true
zeroize.workspace = true

[target.'cfg(any(target_os = "ios", target_os = "macos"))'.dependencies]
core-foundation.workspace = true
core-foundation-sys.workspace = true
security-framework.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
security-framework-sys.workspace = true

[target.'cfg(target_os = "android")'.dependencies]
jni.workspace = true

[dev-dependencies]
aws-lc-sys.workspace = true
hex.workspace = true
tempfile.workspace = true
