[package]
name = "todori-domain"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
uuid.workspace = true
serde.workspace = true
thiserror.workspace = true
chrono.workspace = true
chrono-tz.workspace = true

[dev-dependencies]
serde_json.workspace = true
