[package]
name = "todori-storage"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
hex.workspace = true
rusqlite.workspace = true
serde_json.workspace = true
todori-domain.workspace = true
thiserror.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile.workspace = true
todori-crypto.workspace = true
