[package]
name = "todori-sync"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
todori-crypto.workspace = true
todori-domain.workspace = true
base64.workspace = true
chrono.workspace = true
opaque-ke.workspace = true
rand.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true
zeroize.workspace = true

[dev-dependencies]
argon2.workspace = true
proptest.workspace = true
