[package]
name = "taskveil-sync"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
taskveil-crypto.workspace = true
taskveil-domain.workspace = true
base64.workspace = true
chrono.workspace = true
hkdf.workspace = true
hmac.workspace = true
opaque-ke.workspace = true
rand.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
uuid.workspace = true
zeroize.workspace = true

[dev-dependencies]
argon2.workspace = true
proptest.workspace = true
